# rozofs

./: .gitignore  CMakeLists.txt  README.md  rozo_trash
cmake/: FindINFINIBAND.cmake  FindLIBRT.cmake  FindPCRE.cmake  FindRDMA.cmake  config.h.in  debian.changelog.in  debian.in  rozofs.spec.in
debian/: control  rozofs-exportd.install  rozofs-exportd.service  rozofs-geomgr.service  rozofs-manager-agent.service  rozofs-metadata-backup.install  rozofs-rozodiag.init  rozofs-rozodiag.install  rozofs-rozodiag.service  rozofs-rozofsmount.install  rozofs-rozofsmount.service  rozofs-storaged.install  rozofs-storaged.service  rules
doc/: CMakeLists.txt  export.conf.5  rozo_locate_projections.8  rozo_quotaon.8  rozo_rcmd_server.8  rozo_rebalance.8  rozo_rebalance.conf.5  rozo_repquota.8  rozo_setquota.8  rozo_storage_mount.8  rozo_trash.8  rozo_trashd.8  rozo_trashd.conf.5  rozodiag.8  rozofs.7  rozofs.conf.5  rozofsmount.8  storage.conf.5  storage_rebuild.8  storaged.8
libfuse/: README
libfuse/fuse-2.9.7/: config.status  libtool  mount.c
libfuse/lib/: libfuse.la  libulockmgr.la
redhat/: rozofs-metadata-backup.service  rozofs-metadata-backup.timer  rozofs-rozodiag
rozofs/: CMakeLists.txt  rozofs.h  rozofs_cluster_admin_status_e2String.h  rozofs_cluster_distribution_rule_e2String.h  rozofs_device_distribution_rule_e2String.h  rozofs_file_distribution_rule_e2String.h  rozofs_service_ports.c  rozofs_service_ports.h  rozofs_srv.h  rozofs_timer_conf.c  rozofs_timer_conf.h
rozofs/common/: common_config.c  common_config.h  common_config.input  common_config_extra_checks.c  common_config_read_show.h  exp_trck_inode_srv_v2.c  expbt_inode_file_tracking.c  expbt_inode_file_tracking.h  export_track.h  htable.c  htable.h  list.h  log.c  log.h  mattr.h  posix_acl_attr.h  xmalloc.c
rozofs/core/: af_inet_stream_api.h  af_inet_tcp.c  af_unix_ctx_mgt.c  af_unix_socket_client_generic.c  af_unix_socket_generic.c  af_unix_socket_generic.h  af_unix_socket_generic_api.h  af_unix_socket_send.c  af_unix_socket_server_generic.c  af_unix_socket_stream_send.c  com_tx_timer.h  com_tx_timer_api.h  com_tx_timer_th.c  disk_table_service.c  disk_table_service.h  norh_lbg_timer_th.c  north_lbg.h  north_lbg_api.h  north_lbg_timer_api.h  north_load_balancer.c  north_load_balancer_api.c  north_load_balancer_api_th.c  rozofs_core_files.c  rozofs_fdset.h  rozofs_flock.h  rozofs_numa.c  rozofs_numa.h  rozofs_queue.c  rozofs_queue.h  rozofs_queue_pri.c  rozofs_queue_pri.h  rozofs_rcmd.h  rozofs_rcmd_ope_e2String.h  rozofs_rcmd_status_e2String.h  rozofs_rpc_non_blocking_generic.c  rozofs_rpc_non_blocking_generic.h  rozofs_rpc_non_blocking_generic_srv.c  rozofs_rpc_non_blocking_generic_srv.h  rozofs_socket_family.h  rozofs_string.h  (+27 more)
rozofs/rdma/: rozofs_rdma.c  rozofs_rdma.h  rozofs_rdma_err_e2String.h
rozofs/rpc/: eclient.c  eclient.h  epproto.h  epproto.x  epprotoxdr.c  eproto.h  eproto.x  eprotoclt.c  eprotoclt_patch.c  eprotosvc.c  eprotoxdr.c  expbt_protocol.h  export_profiler.h  mclient.c  mclient.h  mproto.h  mproto.x  mprotoclt.c  mprotosvc.c  mprotoxdr.c  rozofs_rpc_util.h  rpcclt.c  sclient.c  sclient.h  spproto.h  spproto.x  sproto.h  sproto.x  sprotoclt.c  sprotosvc.c  sprotoxdr.c  storcli_lbg.c  storcli_lbg_prototypes.h  storcli_proto.h  storcli_proto.x  storcli_protoxdr.c
src/: CMakeLists.txt
src/exportd/: CMakeLists.txt  cache.c  cache.h  dirent_cache.c  dirent_file.c  dirent_writeback_cache.c  econfig.c  econfig.h  eproto.c  eproto_nb.c  eproto_nb.h  eprotosvc_nb.c  exp_cache.c  exp_cache.h  expbt_start.c  export.h  export_flock.c  export_flock.h  export_internal_channel.c  export_nblock_init.c  export_quota_thread.c  export_quota_thread_api.h  export_thin_prov.c  export_thin_prov_api.h  export_tracking.c  export_trash_reload.c  exportd.c  exportd.h  mdir.c  mdir.h  mdirent.h  monitor.c  monitor.h  quotasys.h  rebalance_config.c  rebalance_config.h  rebalance_config.input  rebalance_config_read_show.h  rozo_balance.h  rozo_clusterstats.c  (+50 more)
src/launcher/: rozolauncher.c
src/rozodiag/: CMakeLists.txt  rozo_core  rozo_memdump  rozo_node_status.py  rozo_nstat  rozo_roce  rozo_status.py  rozodiag.c  rozodiag_legacy.c  rozofs_diag_srv.c
src/rozofsmount/: CMakeLists.txt  file.h  fuse_reply_thread.c  rozo_aging  rozo_distribution_check  rozo_file_consistency  rozo_io  rozo_locate_projections.c  rozo_mount_cleanup  rozo_mount_send_stats.c  rozo_move2fast  rozo_move2slow  rozo_private_broadcast  rozo_scan  rozo_scan_helper  rozo_throughput  rozo_trash  rozofs_attr.c  rozofs_bt_api.h  rozofs_bt_client_lbg.c  rozofs_bt_client_trk_reader.c  rozofs_bt_dirent.c  rozofs_bt_dirent.h  rozofs_bt_dirent_cache.c  rozofs_bt_dirent_stub.c  rozofs_bt_dirent_thread_intf.c  rozofs_bt_init.c  rozofs_bt_inode.c  rozofs_bt_inode.h  rozofs_bt_ioctx.h  rozofs_bt_ioread.c  rozofs_bt_memreg.c  rozofs_bt_north_intf.c  rozofs_bt_proto.h  rozofs_bt_thread_intf.c  rozofs_bt_trk_reader.h  rozofs_cachetrack.c  rozofs_cachetrack.h  rozofs_create.c  rozofs_export_cnx_supervision.c  (+43 more)
src/storaged/: CMakeLists.txt  ROZOFS_RBS_ERROR_E2String.h  mproto.c  mprotosvc.h  rbs.c  rbs.h  rbs_eclient.c  rbs_sclient.c  rbs_sclient.h  rbs_transform.c  rbs_transform.h  rozo_device  rozo_df  rozo_make_rebuild_lists.py  rozo_mpt3sas_port_couters  rozo_storage_fid2pathname.c  rozo_storage_send_stats.c  rozo_storage_throughput  rozodump.c  rozofsstorage_netdata.c  rozofsstorage_netdata_cfg.c  rozofsstorage_netdata_cfg.h  rozofsstorage_netdata_cfg.input  rozofsstorage_netdata_cfg_read_show.h  sconfig.c  sconfig.h  sproto_nb.c  sproto_nb.h  sprotosvc_nb.c  sprotosvc_nb.h  storage.c  storage.h  storage_device_kpi.c  storage_device_kpi.h  storage_device_kpi_e2String.h  storage_device_status_e2String.h  storage_enumeration.c  storage_enumeration.h  storage_header.h  storage_list_rebuilder.c  (+35 more)
src/storcli/: CMakeLists.txt  rdma_client_send.c  (+30 more)
tests/: CMakeLists.txt  adaptative_tbl.py  cnf.py  monitor.py  ref  setup.py  setup.sh  test_lock.c
tools/: cmake_get.sh  config_generate.py  enum2String.py  generate_all_config.py  trash_process_config.py
(+80 files in other folders)
